--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
     "expo": "~52.0.31",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.10.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-svg": "^15.12.0"
+    "react-native-svg": "^15.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-safe-area-context": "4.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
