--- a/package.json
+++ b/package.json
@@ -10,18 +10,29 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@firebase/firestore": "^4.8.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
+    "axios": "^1.10.0",
     "expo": "~52.0.31",
+    "expo-camera": "~16.0.18",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.10.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-svg": "^15.12.0",
+    "react-native-calendars": "^1.1313.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-safe-area-context": "4.12.0"
+    "react-native-slide-modal": "^0.0.32",
+    "react-native-svg": "^15.12.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
