--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@firebase/firestore": "^4.8.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
     "expo": "~52.0.31",
     "expo-camera": "~16.0.18",
     "expo-permissions": "^14.4.0",
